--- a/1_car_sharing/css/style.css
+++ b/1_car_sharing/css/style.css
@@ -21,6 +21,11 @@ body{
     padding-right: 15px;
 }
 
+.hidden{
+    position: absolute;
+    left: -999999px;
+}
+
 
 .row{
     display: flex;
@@ -29,6 +34,7 @@ body{
 .row .col{
     flex-grow: 1;
     margin: 0 10px;
+    flex-basis: 0;
 }
 
 
@@ -45,12 +51,22 @@ body{
     z-index: 100000;
     background: rgba(0,0,0,0.4);
     border-bottom: 1px solid rgba(255,255,255,0.2);
+    transition: 0.5s;
+}
+
+.page-header--sticky{
+    background: #222;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+}
+.page-header--sticky .page-header_container{
+    height: 70px;
 }
 .page-header_container{
     height: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: 0.5s;
 }
 .page-logo{
     color: white;
@@ -116,6 +132,9 @@ span{
     justify-content: center;
     flex-direction: column;
     padding-top: 90px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
 }
 .main-banner:before{
     content: "";
@@ -306,3 +325,143 @@ span{
     padding: 11px 22px;
     transition: 0.3s;
 }
+
+.main-contact{}
+.main-contact_container{}
+.form{
+    padding-left: 50%;
+    background-image: url("../images/form_photo.png");
+}
+.form-row{
+    margin-bottom: 20px;
+}
+
+.form-control{
+    height: 38px;
+    width: 100%;
+    border: 1px solid #D1D1D1;
+    font-family: 'Nunito Sans', sans-serif;
+    padding: 0 10px;
+    border-radius: 8px;
+    color: #b2b2b2;
+
+}
+
+.form-textarea{
+    height: 140px;
+    padding: 10px;
+    resize: none;
+}
+
+.form-checkbox{
+    width: 22px;
+    height: 22px;
+    border-radius: 8px;
+    border: 1px solid #d1d1d1;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+
+}
+
+.form-checkbox-label{
+    color: #b2b2b2;
+    font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+.form-button{
+    border-radius: 40px;
+    display: inline-flex;
+
+    background: #fff;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
+    color: var(--c-main);
+    padding: 11px 22px;
+    transition: 0.3s;
+    border: 2px solid var(--c-main);
+    cursor: pointer;
+    box-shadow: 0 3px 6px rgba(255,0,0,0.3);
+}
+
+
+
+.page-footer{
+    background: var(--c-black);
+    padding: 40px 0;
+}
+.container{}
+.page-footer_container{}
+.page-footer_logo{
+    color: white;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+    text-decoration: none ;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.page-footer_logo {
+    font-weight: 900;
+    color: #fff;
+
+}
+
+.page-footer-logo_img{
+    margin-left: 6px;
+    width: 20px;
+}
+.page-footer-logo_text span{
+    font-weight: 900;
+    color: var(--c-main);
+}
+
+.page-footer-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.page-footer-menu{}
+.page-footer-menu_list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    max-width: 500px;
+}
+.page-footer-menu_list-el{
+    width: 50%;
+}
+.page-footer-menu_list-link{
+    color: #fff;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-flex;
+    padding: 5px 0;
+    text-transform: uppercase;
+
+}
+.page-menu
+
+.page-footer-menu_list-el{}
+.page-footer-menu_list-link{}
+.page-footer-copyright{
+    color: #d1d1d1;
+
+
+}
+.page-footer-menu_list-link-first{
+    color: var(--c-main);
+}
+
